--- a/src/views/portal-aluno.handlebars
+++ b/src/views/portal-aluno.handlebars
@@ -32,23 +32,23 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Progressus HTML5 template"></a>
+				<a class="navbar-brand" href="/index"><img src="assets/images/logo.png" alt="Progressus HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li><a href="index.html">Início</a></li>
-					<li><a href="empresa.html">E	mpresa</a></li>
+					<li><a href="/index">Início</a></li>
+					<li><a href="/empresa">E	mpresa</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Categorias <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="cat-a.html">Cat A</a></li>
-							<li><a href="cat-b.html">Cat B</a></li>
-							<li class="active"><a href="cat-ab.html">Cat A/B</a></li>
-							<li class="active"><a href="adicao.html">Adição</a></li>
+							<li><a href="/cat-a">Cat A</a></li>
+							<li><a href="/cat-b">Cat B</a></li>
+							<li class="active"><a href="/cat-ab">Cat A/B</a></li>
+							<li class="active"><a href="/adicao">Adição</a></li>
 						</ul>
 					</li>
-					<li><a href="contato.html">Contato</a></li>
-					<li class="active"><a class="btn" href="portal-aluno.html">Portal do Aluno</a></li>
+					<li><a href="/contato">Contato</a></li>
+					<li class="active"><a class="btn" href="/portal-aluno">Portal do Aluno</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -61,7 +61,7 @@
 	<div class="container">
 
 		<ol class="breadcrumb">
-			<li><a href="index.html">Início</a></li>
+			<li><a href="/index">Início</a></li>
 			<li class="active">Área do Aluno</li>
 		</ol>
 
@@ -159,11 +159,11 @@
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="simplenav">
-								<a href="index.html">Início</a> | 
-								<a href="empresa.html">Empresa</a> |
-								<a href="cat-b.html">Categorias</a> |
-								<a href="contato.html">Contato</a> |
-								<b><a href="portal-aluno.html">Portal do Aluno</a></b>
+								<a href="/index">Início</a> | 
+								<a href="/empresa">Empresa</a> |
+								<a href="/cat-b">Categorias</a> |
+								<a href="/contato">Contato</a> |
+								<b><a href="/portal-aluno">Portal do Aluno</a></b>
 							</p>
 						</div>
 					</div>
