inserindo css e imagens(em andamento)

--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -63,7 +63,7 @@
 			<div class="row">
 				<h1 class="lead">CARTEIRA DE HABILITAÇÃO NA MÃO!</h1>
 				<p class="tagline">Venha confire nossos descontos</p>
-				<p><a class="btn btn-default btn-lg" role="button"href="contato.html">CONTATO</a> <a class="btn btn-action btn-lg" role="button" href="cat-b.html">SAIBA MAIS</a></p>
+				<p><a class="btn btn-default btn-lg" role="button"href="/contato">CONTATO</a> <a class="btn btn-action btn-lg" role="button" href="/cat-b">SAIBA MAIS</a></p>
 			</div>
 		</div>
 	</header>
