--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -5,6 +5,19 @@
       <title>WebStatus</title>
     </head>
     <body>
+      
+	<link rel="shortcut icon" href="src/views/assets/images/gt_favicon.png">
+	
+	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+	<link rel="stylesheet" href="bootstrap.min">
+	<link rel="stylesheet" href="font-awesome.min">
+
+	<!-- Styles bootstrap e CSS -->
+	<link rel="stylesheet" href="bootstrap-theme"  >
+	<link rel="stylesheet" href="main">
+	<!-- Font Awesome-->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen">
+      
       {{{head}}}
         {{{body}}}
     </body>
