--- a/views/adicao.handlebars
+++ b/views/adicao.handlebars
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
 	
-	<title>Moto/Carro</title>
+	<title>Moto</title>
 
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
 	
@@ -17,7 +17,7 @@
 	<!-- Custom styles for our template -->
 	<link rel="stylesheet" href="assets/css/bootstrap-theme.css" media="screen" >
 	<link rel="stylesheet" href="assets/css/main.css">
-
+	
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 	<script src="assets/js/html5shiv.js"></script>
@@ -26,25 +26,26 @@
 </head>
 
 <body>
+	<script src='adicao'></script>
 	<!-- Fixed navbar -->
 	<div class="navbar navbar-inverse navbar-fixed-top headroom" >
 		<div class="container">
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="/index"><img src="assets/images/logo.png" alt="Progressus HTML5 template"></a>
+				<a class="navbar-brand" href="/"><img src="assets/images/logo.png" alt="Progressus HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li><a href="/index">Início</a></li>
+					<li><a href="/">Início</a></li>
 					<li><a href="/empresa">Empresa</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Categorias <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li class="active"><a href="/cat-a">Cat A</a></li>
-                            <li><a href="/cat-b">Cat B</a></li>
-							<li class="active"><a href="/cat-ab">Cat A/B</a></li>
-							<li class="active"><a href="/adicao">Adição</a></li>
+							<li><a href="/cat-b">Cat B</a></li>
+                            <li class="active"><a href="/cat-ab">Cat A/B</a></li>
+                            <li class="active"><a href="/adicao">Adição</a></li>
 						</ul>
 					</li>
 					<li><a href="/contato">Contato</a></li>
@@ -61,8 +62,8 @@
 	<div class="container">
 		
 		<ol class="breadcrumb">
-			<li><a href="/index">Início</a></li>
-			<li class="active"> Carro/Moto</li>
+			<li><a href="/">Início</a></li>
+			<li class="active"> Moto</li>
 		</ol>
 
 		<div class="row">
@@ -165,7 +166,7 @@
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="simplenav">
-								<a href="/index">Início</a> | 
+								<a href="/">Início</a> | 
 								<a href="/empresa">Empresa</a> |
 								<a href="/cat-b">Categorias</a> |
 								<a href="/contato">Contato</a> |
@@ -177,7 +178,7 @@
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="text-right">
-								Copyright &copy; 2020, Auto Escola Status. 
+								Copyright &copy; 2020, Auto Escola Status.  
 							</p>
 						</div>
 					</div>
