--- a/views/cat-a.handlebars
+++ b/views/cat-a.handlebars
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
 	
-	<title>Empresa</title>
+	<title>Moto</title>
 
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
 	
@@ -32,16 +32,16 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Progressus HTML5 template"></a>
+				<a class="navbar-brand" href="/"><img src="assets/images/logo.png" alt="Progressus HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li><a href="/index">Início</a></li>
-					<li class="active"><a href="/empresa">Empresa</a></li>
+					<li><a href="/">Início</a></li>
+					<li><a href="/empresa">Empresa</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Categorias <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="/cat-a">Cat A</a></li>
+							<li class="active"><a href="/cat-a">Cat A</a></li>
 							<li><a href="/cat-b">Cat B</a></li>
 							<li class="active"><a href="/cat-ab">Cat A/B</a></li>
 							<li class="active"><a href="/adicao">Adição</a></li>
@@ -59,40 +59,65 @@
 
 	<!-- container -->
 	<div class="container">
-
+		
 		<ol class="breadcrumb">
-			<li><a href="/index">Início</a></li>
-			<li class="active">Empresa</li>
+			<li><a href="/">Início</a></li>
+			<li class="active"> Moto</li>
 		</ol>
 
 		<div class="row">
 			
-			<!-- Article main content -->
-			<article class="col-sm-8 maincontent">
-				<header class="page-header">
-					<h1 class="page-title">Sobre a Status</h1>
-				</header>
-				<h3></h3>
-				<p><img src="assets/images/mac.jpg" alt="" class="img-rounded pull-right" width="300" > O Centro de Formação de Condutores status foi fundado em outubro de 2005 com a finalidade de formar Condutores responsáveis por vida e assim trazer mais Paz ao trânsito. Tendo uma equipe de instrutores formados e capacitados para contribuir com a baixa estatística de acidentes de trânsito. A Status está localizada na Baixa do Bonfim em um dos pontos turísticos de Salvador, possui uma excelente estrutura com salas de aula climatizadas e com exclusiva área coberta e fechada para treinamento
-					 prático de motos, o ambiente é agradável e harmonioso favorecendo assim o aprendizado de seus clientes.
-					</p>
-				<h3>Misão</h3>
-				<p>Uma Declaração de missão é uma declaração do propósito de uma empresa ou organização. Esta declaração deve orientar as ações da organização, explicitar seu objetivo geral, proporcionar um senso de direção, e orientar a tomada de decisões.</p>
-				<h3>Valores</h3>
-				<p>Em ética, valor denota o grau de importância de alguma coisa ou ação, com o objetivo de determinar quais são as melhores ações a serem tomadas ou qual a melhor maneira de viver, ou para determinar a importância de diferentes ações.</p>
-				<h3>Visão</h3>
-				<p> é a razão de existir de uma organização, ou seja, o porquê de ela ter sido criada. Na prática, seu propósito de existir é o que, no dia a dia, dá verdadeiro sentido ao trabalho da equipe e guia suas ações nesta direção. Visão – mostra aonde a empresa quer chegar e traz seus objetivos de longo prazo.</p>
-				
-			</article>
-			<!-- /Article -->
-			
 			<!-- Sidebar -->
-			<aside class="col-sm-4 sidebar sidebar-right">
+			<aside class="col-md-4 sidebar sidebar-left">
 
-				
+				<div class="row widget">
+					<div class="col-xs-12">
+						<h4>1ª Habilitação de Moto</h4>
+						<p>A autoescola status oferece o curso para 1ª habilitação na categoria A, para conduzir motos, triciclos e outros.</p>
+					</div>
+				</div>
+				<div class="row widget">
+					<div class="col-xs-12">
+						<p><img src="assets/images/moto.jpg" alt=""></p>
+					</div>
+				</div>
+				<div class="row widget">
+					<div class="col-xs-12">
+						<h4>Área de Moto </h4>
+						<p><img src="assets/images/pista-moto.jpg" alt=""></p>
+						<p>Com nova quadra de moto estamos sempre cuidando e dando o melhor para os nossos clientes.</p>
+					</div>
+				</div>
 
 			</aside>
 			<!-- /Sidebar -->
+
+			<!-- Article main content -->
+			<article class="col-md-8 maincontent">
+				<header class="page-header">
+					<h1 class="page-title">Habilitação para pilotar motos</h1>
+				</header>
+				<p>Habilita a conduzir veículos automotores de 2 ou 3 rodas – com ou sem carro lateral –  como motocicletas, ciclomotores, motonetas e triciclos. NÃO PERMITE dirigir nenhum outro tipo de veículo automotor.</p>
+				<p>Ideal para quem busca mais agilidade e mobilidade no trânsito intenso do dia a dia.</p>
+
+				<h3>Categoria “A”</h3>
+				<p>Veículos motorizados de duas ou três rodas (Motos e Triciclos), com ou sem carro lateral.</p>
+				
+				<h3>IMPORTANTE</h3>
+				<p>Se for aprovado, você receberá a permissão provisória para dirigir. A CNH definitiva será expedida após um ano da emissão se o condutor não tiver cometido infrações de natureza grave ou gravíssima durante esse período. O motorista também não pode ter cometido infração de natureza média mais de uma vez..</p>
+				
+				<h3>Etapas a seguir para quem deseja fazer este curso:</h3><br>
+
+				<p>1- Compra do Laudo<br>
+				2- Exames clínico e psicológico<br>
+				3- Aulas Teóricas (45h/aula)<br>
+				4- Realizar o simulado da prova teórico<br>
+				5- Realização da prova teórica (mediante agendamento prévio na Autoescola Reis)<br>
+				6- Retornar à Autoescola para solicitar o LADV (Licença para Aprendizagem de Direção Veicular)<br>
+				7- Realizar 20 aulas práticas<br>
+				8- Realização do exame prático (mediante agendamento prévio na Autoescola Reis)</p>
+			</article>
+			<!-- /Article -->
 
 		</div>
 	</div>	<!-- /container -->
@@ -143,10 +168,10 @@
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="simplenav">
-								<a href="/index">Início</a> | 
+								<a href="/">Início</a> | 
 								<a href="/empresa">Empresa</a> |
 								<a href="/cat-b">Categorias</a> |
-								<a href="/contato">Contato</a> |
+								<a href="/contatol">Contato</a> |
 								<b><a href="/portal-aluno">Portal do Aluno</a></b>
 							</p>
 						</div>
@@ -155,7 +180,7 @@
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="text-right">
-								Copyright &copy; 2020, Auto Escola Status. 
+								Copyright &copy; 2020, Auto Escola Status.  
 							</p>
 						</div>
 					</div>
