--- a/views/empresa.handlebars
+++ b/views/empresa.handlebars
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
 	
-	<title>Portal do Aluno</title>
+	<title>Empresa</title>
 
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
 	
@@ -32,12 +32,12 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="/index"><img src="assets/images/logo.png" alt="Progressus HTML5 template"></a>
+				<a class="navbar-brand" href="/"><img src="assets/images/logo.png" alt="Progressus HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li><a href="/index">Início</a></li>
-					<li><a href="/empresa">E	mpresa</a></li>
+					<li><a href="/">Início</a></li>
+					<li class="active"><a href="/empresa">Empresa</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Categorias <b class="caret"></b></a>
 						<ul class="dropdown-menu">
@@ -48,7 +48,7 @@
 						</ul>
 					</li>
 					<li><a href="/contato">Contato</a></li>
-					<li class="active"><a class="btn" href="/portal-aluno">Portal do Aluno</a></li>
+					<li><a class="btn" href="/portal-aluno">Portal do Aluno</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -61,53 +61,38 @@
 	<div class="container">
 
 		<ol class="breadcrumb">
-			<li><a href="/index">Início</a></li>
-			<li class="active">Área do Aluno</li>
+			<li><a href="/">Início</a></li>
+			<li class="active">Empresa</li>
 		</ol>
 
 		<div class="row">
 			
 			<!-- Article main content -->
-			<article class="col-xs-12 maincontent">
+			<article class="col-sm-8 maincontent">
 				<header class="page-header">
-					<h1 class="page-title"><b>Portal do Aluno</b></h1>
+					<h1 class="page-title">Sobre a Status</h1>
 				</header>
-				
-				<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-					<div class="panel panel-default">
-						<div class="panel-body">
-							<h3 class="thin text-center">Entre na sua conta</h3>
-							<p class="text-center text-muted"> </p>
-							<hr>
-							
-							<form>
-								<div class="top-margin">
-									<label>CPF <span class="text-danger">*</span></label>
-									<input type="text" class="form-control">
-								</div>
-								<div class="top-margin">
-									<label>Senha <span class="text-danger">*</span></label>
-									<input type="password" class="form-control">
-								</div>
-
-								<hr>
-
-								<div class="row">
-									<div class="col-lg-8">
-										<b><a href="">Esqueceu a senha?</a></b>
-									</div>
-									<div class="col-lg-4 text-right">
-										<button class="btn btn-action" type="submit">Entrar</button>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
-
-				</div>
+				<h3></h3>
+				<p><img src="assets/images/mac.jpg" alt="" class="img-rounded pull-right" width="300" > O Centro de Formação de Condutores status foi fundado em outubro de 2005 com a finalidade de formar Condutores responsáveis por vida e assim trazer mais Paz ao trânsito. Tendo uma equipe de instrutores formados e capacitados para contribuir com a baixa estatística de acidentes de trânsito. A Status está localizada na Baixa do Bonfim em um dos pontos turísticos de Salvador, possui uma excelente estrutura com salas de aula climatizadas e com exclusiva área coberta e fechada para treinamento
+					 prático de motos, o ambiente é agradável e harmonioso favorecendo assim o aprendizado de seus clientes.
+					</p>
+				<h3>Misão</h3>
+				<p>Uma Declaração de missão é uma declaração do propósito de uma empresa ou organização. Esta declaração deve orientar as ações da organização, explicitar seu objetivo geral, proporcionar um senso de direção, e orientar a tomada de decisões.</p>
+				<h3>Valores</h3>
+				<p>Em ética, valor denota o grau de importância de alguma coisa ou ação, com o objetivo de determinar quais são as melhores ações a serem tomadas ou qual a melhor maneira de viver, ou para determinar a importância de diferentes ações.</p>
+				<h3>Visão</h3>
+				<p> é a razão de existir de uma organização, ou seja, o porquê de ela ter sido criada. Na prática, seu propósito de existir é o que, no dia a dia, dá verdadeiro sentido ao trabalho da equipe e guia suas ações nesta direção. Visão – mostra aonde a empresa quer chegar e traz seus objetivos de longo prazo.</p>
 				
 			</article>
 			<!-- /Article -->
+			
+			<!-- Sidebar -->
+			<aside class="col-sm-4 sidebar sidebar-right">
+
+				
+
+			</aside>
+			<!-- /Sidebar -->
 
 		</div>
 	</div>	<!-- /container -->
@@ -126,7 +111,6 @@
 								<a href="mailto:#">autoescolastatus@hotmail.com</a><br>
 								<br>
 								Rua Travasso de fora, Largo da Baixa do Bonfim, nº 2, Salvador - BA
-							</p>	
 							</p>	
 						</div>
 					</div>
@@ -159,7 +143,7 @@
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="simplenav">
-								<a href="/index">Início</a> | 
+								<a href="/">Início</a> | 
 								<a href="/empresa">Empresa</a> |
 								<a href="/cat-b">Categorias</a> |
 								<a href="/contato">Contato</a> |
