--- a/views/portal-aluno.handlebars
+++ b/views/portal-aluno.handlebars
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
 	
-	<title>Carro</title>
+	<title>Portal do Aluno</title>
 
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
 	
@@ -32,23 +32,23 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Progressus HTML5 template"></a>
+				<a class="navbar-brand" href="/"><img src="assets/images/logo.png" alt="Progressus HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li><a href="/index">Início</a></li>
-					<li><a href="/empresa">Empresa</a></li>
+					<li><a href="/">Início</a></li>
+					<li><a href="/empresa">E	mpresa</a></li>
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Categorias  <b class="caret"></b></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Categorias <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="/cat-a">Cat A</a></li>
-							<li class="active"><a href="/cat-b">Cat B</a></li>
+							<li><a href="/cat-b">Cat B</a></li>
 							<li class="active"><a href="/cat-ab">Cat A/B</a></li>
 							<li class="active"><a href="/adicao">Adição</a></li>
 						</ul>
 					</li>
 					<li><a href="/contato">Contato</a></li>
-					<li><a class="btn" href="/portal-aluno">Portal do Aluno</a></li>
+					<li class="active"><a class="btn" href="/portal-aluno">Portal do Aluno</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -61,64 +61,53 @@
 	<div class="container">
 
 		<ol class="breadcrumb">
-			<li><a href="/index">Início</a></li>
-			<li class="active"> Carro</li>
+			<li><a href="/">Início</a></li>
+			<li class="active">Área do Aluno</li>
 		</ol>
 
 		<div class="row">
 			
 			<!-- Article main content -->
-			<article class="col-md-8 maincontent">
+			<article class="col-xs-12 maincontent">
 				<header class="page-header">
-					<h1 class="page-title">Habilitação para dirigir carros.</h1>
+					<h1 class="page-title"><b>Portal do Aluno</b></h1>
 				</header>
-				<p>Habilita a conduzir veículos automotores com ou sem reboque, com peso bruto total (PBT) de até 3.500 kg e lotação máxima de 8 lugares, não contando o do condutor. NÃO PERMITE dirigir veículos automotores de 02 ou 03 rodas. Permite conduzir veículo automotor da espécie motor-casa cujo peso não exceda a 6.000kg, ou cuja lotação não exceda a 08 lugares, excluído o do condutor (Lei 12.452/11). 
-					Permite também conduzir trator de rodas e máquinas agrícolas (Lei 13.097/15).</p>
-					<p>Ideal para quem busca conforto e segurança, principalmente para viajar com a família.</p>
+				
+				<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+					<div class="panel panel-default">
+						<div class="panel-body">
+							<h3 class="thin text-center">Entre na sua conta</h3>
+							<p class="text-center text-muted"> </p>
+							<hr>
+							
+							<form>
+								<div class="top-margin">
+									<label>CPF <span class="text-danger">*</span></label>
+									<input type="text" class="form-control">
+								</div>
+								<div class="top-margin">
+									<label>Senha <span class="text-danger">*</span></label>
+									<input type="password" class="form-control">
+								</div>
 
-				<h3>Categoria “B”</h3>
-				<p>Veículos motorizados, não abrangidos pela categoria “A”, cujo peso bruto total não exceda a três mil e quinhentos quilogramas e cuja lotação não exceda a oito lugares, excluído o do motorista. Estão os condutores da categoria “B”, também autorizados a conduzir veículos automotores do tipo motor-casa (“MotorHome”),
-					 cujo peso não exceda a 6.000 kg, ou cuja lotação não exceda a 08 lugares, excluído o do motorista.</p>
+								<hr>
 
-				<h3>IMPORTANTE</h3>
-				<p>Se for aprovado, você receberá a permissão provisória para dirigir. A CNH definitiva será expedida após um ano da emissão se o condutor não tiver cometido infrações de natureza grave ou gravíssima durante esse período. O motorista também não pode ter cometido infração de natureza média mais de uma vez.</p>
+								<div class="row">
+									<div class="col-lg-8">
+										<b><a href="">Esqueceu a senha?</a></b>
+									</div>
+									<div class="col-lg-4 text-right">
+										<button class="btn btn-action" type="submit">Entrar</button>
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
 
-				<h3>Etapas para quem deseja fazer este curso:</h3>
-                  <p>1- Compra do Laudo <br>
-					2- Exames clínico e psicológico <br>
-					3- Aulas Teóricas (45h/aula) <br>
-					4- Realizar o simulado da prova teórica <br>
-					5- Realização da prova teórica (mediante agendamento prévio na Autoescola Status) <br>
-					6- Retornar à Autoescola para solicitar o LADV (Licença para Aprendizagem de Direção Veicular) <br>
-					7- Realizar 20 aulas práticas <br>
-					8- Realização do exame prático (mediante agendamento prévio na Autoescola Status)</p>
+				</div>
+				
 			</article>
 			<!-- /Article -->
-			
-			<!-- Sidebar -->
-			<aside class="col-md-4 sidebar sidebar-right">
-
-				<div class="row widget">
-					<div class="col-xs-12">
-						<h4>1ª Habilitação Categoria “B” </h4>
-						<p>O curso de 1º habilitação na categoria B, da autoescola status, prepara condutores de automóveis de até 8 lugares.</p>
-					</div>
-				</div>
-				<div class="row widget">
-					<div class="col-xs-12">
-						<p><img src="assets/images/teste.jpg" alt=""></p>
-					</div>
-				</div>
-				<div class="row widget">
-					<div class="col-xs-12">
-						<h4>Lorem ipsum dolor sit</h4>
-						<p><img src="assets/images/bomfim.jpg" alt=""></p>
-						<p>Nossa área para os alunos aprenderem a conduzir o veiculo da autoescola status é na cidade baixa</p>
-					</div>
-				</div>
-
-			</aside>
-			<!-- /Sidebar -->
 
 		</div>
 	</div>	<!-- /container -->
@@ -137,6 +126,7 @@
 								<a href="mailto:#">autoescolastatus@hotmail.com</a><br>
 								<br>
 								Rua Travasso de fora, Largo da Baixa do Bonfim, nº 2, Salvador - BA
+							</p>	
 							</p>	
 						</div>
 					</div>
@@ -169,7 +159,7 @@
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="simplenav">
-								<a href="/index">Início</a> | 
+								<a href="/">Início</a> | 
 								<a href="/empresa">Empresa</a> |
 								<a href="/cat-b">Categorias</a> |
 								<a href="/contato">Contato</a> |
