--- a/views/contato.handlebars
+++ b/views/contato.handlebars
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
 	
-	<title>Administração</title>
+	<title>Contato</title>
 
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
 	
@@ -32,23 +32,23 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="/index"><img src="assets/images/logo.png" alt="Progressus HTML5 template"></a>
+				<a class="navbar-brand" href="/"><img src="assets/images/logo.png" alt="Progressus HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li><a href="/index">Início</a></li>
+					<li><a href="/">Início</a></li>
 					<li><a href="/empresa">Empresa</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Categorias <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="/cat-a">Cat A</a></li>
 							<li><a href="/cat-b">Cat B</a></li>
-							<li class="active"><a href="/cat-abl">Cat A/B</a></li>
+							<li class="active"><a href=/"cat-ab">Cat A/B</a></li>
 							<li class="active"><a href="/adicao">Adição</a></li>
 						</ul>
 					</li>
-					<li><a href="/contato">Contato</a></li>
-					<li class="active"><a class="btn" href="/portal-aluno">Portal do Aluno</a></li>
+					<li class="active"><a href="/contato">Contato</a></li>
+					<li><a class="btn" href="/portal-aluno">Portal do Aluno</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -61,59 +61,80 @@
 	<div class="container">
 
 		<ol class="breadcrumb">
-			<li><a href="/index">Início</a></li>
-			<li class="active">Área do Adm</li>
+			<li><a href="/">Início</a></li>
+			<li class="active">Contato</li>
 		</ol>
 
 		<div class="row">
 			
 			<!-- Article main content -->
-			<article class="col-xs-12 maincontent">
+			<article class="col-sm-9 maincontent">
 				<header class="page-header">
-					<h1 class="page-title"><b>Administrador</b></h1>
+					<h1 class="page-title">Contato</h1>
 				</header>
 				
-				<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-					<div class="panel panel-default">
-						<div class="panel-body">
-							<h3 class="thin text-center">Entre como administrador</h3>
-							<p class="text-center text-muted"> </p>
-							<hr>
-							
-							<form>
-								<div class="top-margin">
-									<label>E-mail<span class="text-danger">*</span></label>
-									<input type="text" class="form-control">
-								</div>
-								<div class="top-margin">
-									<label>Senha <span class="text-danger">*</span></label>
-									<input type="password" class="form-control">
-								</div>
-
-								<hr>
-
-								<div class="row">
-									<div class="col-lg-8">
-										<b><a href="./adm/adm.html"></a></b>
-									</div>
-									<div class="col-lg-4 text-right">
-										<button class="btn btn-action" type="submit">Entrar</button>
-									</div>
-								</div>
-							</form>
+				<p>
+					
+                 Preencha o formulário abaixo para solicitar um orçamento e entraremos em contato com você o mais breve possível.
+				</p>
+				<br>
+					<form>
+						<div class="row">
+							<div class="col-sm-4">
+								<input class="form-control" type="text" placeholder="Nome">
+							</div>
+							<div class="col-sm-4">
+								<input class="form-control" type="text" placeholder="Email">
+							</div>
+							<div class="col-sm-4">
+								<input class="form-control" type="text" placeholder="Telefone">
+							</div>
 						</div>
-					</div>
+						<br>
+						<div class="row">
+							<div class="col-sm-12">
+								<textarea placeholder="Envie sua dúvida" class="form-control" rows="9"></textarea>
+							</div>
+						</div>
+						<br>
+						<div class="row">
+							<div class="col-sm-6">
+								<label class="checkbox"><input type="checkbox"> Receber notificações</label>
+							</div>
+							<div class="col-sm-6 text-right">
+								<input class="btn btn-action" type="submit" value="Enviar">
+							</div>
+						</div>
+					</form>
 
-				</div>
-				
 			</article>
 			<!-- /Article -->
+			
+			<!-- Sidebar -->
+			<aside class="col-sm-3 sidebar sidebar-right">
+
+				<div class="widget">
+					<h4>Endereço</h4>
+					<address>
+						Rua Travasso de fora, Largo da Baixa do Bonfim, nº 2, Salvador - BA
+					</address>
+					<h4>Telefone:</h4>
+					<address>
+						(71) 3000-0000
+					</address>
+				</div>
+
+			</aside>
+			<!-- /Sidebar -->
 
 		</div>
 	</div>	<!-- /container -->
 	
+	<section class="container-full top-space">
+		<div id="map"></div>
+	</section>
 
-	<footer id="footer" class="top-space">
+	<footer id="footer">
 
 		<div class="footer1">
 			<div class="container">
@@ -126,7 +147,6 @@
 								<a href="mailto:#">autoescolastatus@hotmail.com</a><br>
 								<br>
 								Rua Travasso de fora, Largo da Baixa do Bonfim, nº 2, Salvador - BA
-							</p>	
 							</p>	
 						</div>
 					</div>
@@ -159,7 +179,7 @@
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="simplenav">
-								<a href="/index">Início</a> | 
+								<a href="/">Início</a> | 
 								<a href="/empresa">Empresa</a> |
 								<a href="/cat-b">Categorias</a> |
 								<a href="/contato">Contato</a> |
@@ -191,5 +211,11 @@
 	<script src="assets/js/headroom.min.js"></script>
 	<script src="assets/js/jQuery.headroom.min.js"></script>
 	<script src="assets/js/template.js"></script>
+	
+	<!-- Google Maps -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=&amp;sensor=false&amp;extension=.js"></script> 
+	<script src="assets/js/google-map.js"></script>
+	
+
 </body>
 </html>
