--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,7 @@
 	
 	<title>CFC- Status</title>
 
-	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
+	<link rel="shortcut icon" href="/assets/images/gt_favicon.png">
 	
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -34,14 +34,14 @@
 			<div class="navbar-header">
 				<!-- botão dos menu começo -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="/index"><img src="assets/images/logo.png" alt="Progressus HTML5 template"></a>
+				<a class="navbar-brand" href="/"><img src="assets/images" alt="Progressus HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li class="active"><a href="#">Início</a></li>
+					<li class="active"><a href="/">Início</a></li>
 					<li><a href="/empresa">Empresa</a></li>
 					<li class="dropdown">
-						<a href="/index" class="dropdown-toggle" data-toggle="dropdown">Categorias <b class="caret"></b></a>
+						<a href="/" class="dropdown-toggle" data-toggle="dropdown">Categorias <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="/cat-a">Cat A</a></li>
 							<li class="active"><a href="/cat-b">Cat B</a></li>
@@ -219,7 +219,7 @@
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="simplenav">
-								<a href="/index">Início</a> | 
+								<a href="/">Início</a> | 
 								<a href="/empresa">Empresa</a> |
 								<a href="/cat-b">Categorias</a> |
 								<a href="/contato">Contatos</a> |
