--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,16 +6,17 @@
     </head>
     <body>
 		   
-//disponibiliza os css vindo do app.js para os handlebars
+<!-- disponibiliza os css vindo do app.js para os handlebars-->
 	<link rel='stylesheet' href='bootstrap-theme'>
     <link rel='stylesheet' href='main'>
     <link rel='stylesheet' href='bootstrap.min'>
     <link rel='stylesheet' href='font-awesome.min'>
 
 
+      
       {{{body}}}
 
-//disponibiliza os js vindo do app.js para os handlebars
+<!--disponibiliza os js vindo do app.js para os handlebars-->
       <script src='google-maps'> </script>
       <script src='headroom.min'> </script>
       <script src='html5shiv'> </script>
@@ -24,28 +25,31 @@
       <script src='template'> </script>
 
 
-//disponibiliza as imagens vindas do app.js para os handlebars    
-
-
-  <img src="logo.png">
-  
-  <img src="bg_header.jpg">
-  
-  <img src="bomfim.jpg">
-  
-  <img src="gt_favicon.png">
-  
-  <img src="mac.jpg">
-  
-  <img src="moto.jpg">
-  
-  <img src="pista-moto.jpg">
-  
-  <img src="sinalito.jpg">
-  
-  <img src="sinalito-m.png">
-  
-
-
-    </body>
-</html>
+<!--disponibiliza as imagens vindas do app.js para os handlebars --> 
+<div class="navbar navbar-inverse navbar-fixed-top headroom" >
+		<div class="container">
+			<div class="navbar-header">
+				<!-- Button for smallest screens -->
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+				<a class="navbar-brand" href="/"><img src="logo.png" alt="Progressus HTML5 template"></a>
+			</div>
+			<div class="navbar-collapse collapse">
+				<ul class="nav navbar-nav pull-right">
+					<li><a href="/">Início</a></li>
+					<li><a href="/empresa">Empresa</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Categorias <b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li class="active"><a href="/cat-a">Cat A</a></li>
+							<li><a href="/cat-b">Cat B</a></li>
+							<li class="active"><a href="/cat-ab">Cat A/B</a></li>
+							<li class="active"><a href="/adicao">Adição</a></li>
+						</ul>
+					</li>
+					<li><a href="/contato">Contato</a></li>
+					<li><a class="btn" href="/portal-aluno">Portal do Aluno</a></li>
+				</ul>
+			</div><!--/.nav-collapse -->
+		</div>
+	</div> 
+	
