--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,7 @@
       <script src='respond.min'> </script>
       <script src='template'> </script>
 
+<img rel="shortcut icon" href="/public/gt_favicon.png">
 
 <!--disponibiliza as imagens vindas do app.js para os handlebars --> 
 <div class="navbar navbar-inverse navbar-fixed-top headroom" >
