--- a/views/adm/inseriraulas.handlebars
+++ b/views/adm/inseriraulas.handlebars
@@ -23,33 +23,34 @@
     <div class="container">
         <nav>
             <ul class="menu">
-                <a href="adm.html">
+                <a href="adm">
                     <li><i class="fa fa-user"></i> Novo Cadastro</li>
                 </a>
-                <a href="buscar.html">
-                    <li><i class="fa fa-search"></i> Buscar</li>
+                <a href="/buscar">
+                    <li><i class="fa fa-search"></i> /</li>
                 </a>
-                <a href="deletar.html">
+                <a href="/deletar">
                     <li><i class="fa fa-trash"></i> Deletar</li>
                 </a>
-                <a href="solicitacoes.html">
+                <a href="/solicitacoes">
                     <li><i class="fa fa-bell"></i> Solicitações</li>
                 </a>
-                <a href="inseriraulas.html">
+                <a href="/inseriraulas">
                     <li><i class="fa fa-folder"></i> Inserir Aulas</li>
                 </a>
-                <a href="historicoaluno.html">
+                <a href="/historicoaluno">
                     <li><i class="fa fa-history"></i> Histórico de Aluno</li>
                 </a>
-                <a href="AdmLogin.php">
+                <a href="/AdmLogin">
                     <li><i class="fa fa-sign-out"></i> Encerrar</li>
                 </a>
+            </ul>
             </ul>
         </nav>
         <section>
             <!-- final do menu -->
             <div class="mininav">
-                <h1>Encerrar Sessão</h1>
+                <h1>Inserir Aulas</h1>
             </div>
             <br>
             <!-- formulário de Cadastro de Aluno -->
@@ -57,11 +58,7 @@
                 <form method="post" action="../Controller/cadastro.php">
 
                    
-              
-
-
-                    <input type="submit" value="Sair" class="btn">
-                   
+                 
                     <br>
                     <br>
                 </form>
@@ -75,7 +72,7 @@
 
 
 
-</html>
+<>
     
 
 
@@ -83,4 +80,4 @@
 
 
 </body>
-</html>
+<>
