--- a/views/adm/adm.handlebars
+++ b/views/adm/adm.handlebars
@@ -2,10 +2,8 @@
 <html lang="pt-br">
 <head> 
 <meta charset="UTF-8">
-    <?php 
-        include_once("../model/masc.php");
-   ?>
-    <link rel="shortcut icon" href="./images/gt_favicon.png">
+   
+    <link rel="shortcut icon" href="/public/gt_favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="./css/Padm.css">
@@ -42,25 +40,25 @@
     <div class="container">
         <nav>
             <ul class="menu">
-                <a href="adm.html">
+                <a href="/adm/adm">
                     <li><i class="fa fa-user"></i> Novo Cadastro</li>
                 </a>
-                <a href="buscar.html">
+                <a href="/adm/buscar">
                     <li><i class="fa fa-search"></i> Buscar</li>
                 </a>
-                <a href="deletar.html">
+                <a href="/adm/deletar">
                     <li><i class="fa fa-trash"></i> Deletar</li>
                 </a>
-                <a href="">
+                <a href="/adm/solicitacoes">
                     <li><i class="fa fa-bell"></i> Solicitações</li>
                 </a>
-                <a href="">
+                <a href="/adm/inseriraulas">
                     <li><i class="fa fa-folder"></i> Inserir Aulas</li>
                 </a>
-                <a href="">
+                <a href="/adm/históricoaluno">
                     <li><i class="fa fa-history"></i> Histórico de Aluno</li>
                 </a>
-                <a href="/View/admin.html">
+                <a href="/views/adm">
                     <li><i class="fa fa-sign-out"></i> Encerrar</li>
                 </a>
             </ul>
@@ -139,4 +137,4 @@
 
 
 
-</html>
+<>
