--- a/views/adm/historicoaluno.handlebars
+++ b/views/adm/historicoaluno.handlebars
@@ -4,15 +4,15 @@
     <link rel="shortcut icon" href="./images/gt_favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="./css/Padm.css">
+    <link rel="stylesheet" type="text/css" href="./css/P/adm.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <title>Area do administrador</title>
+    <title>Area do /administrador</title>
 </head>
 <header>
     <div class="header-area">
         <div class="logo">
             <a href="#">
-                <img src="./images/logoadm.png" alt="">
+                <img src="./images/logo/adm.png" alt="">
             </a>
         </div>
 </header>
@@ -22,25 +22,25 @@
     <div class="container">
         <nav>
             <ul class="menu">
-                <a href="adm.html">
+                <a href="/adm">
                     <li><i class="fa fa-user"></i> Novo Cadastro</li>
                 </a>
-                <a href="buscar.html">
+                <a href="/buscar">
                     <li><i class="fa fa-search"></i> Buscar</li>
                 </a>
-                <a href="deletar.html">
+                <a href="/deletar">
                     <li><i class="fa fa-trash"></i> Deletar</li>
                 </a>
-                <a href="solicitacoes.html">
+                <a href="/solicitacoes">
                     <li><i class="fa fa-bell"></i> Solicitações</li>
                 </a>
-                <a href="inseriraulas.html">
+                <a href="/inseriraulas">
                     <li><i class="fa fa-folder"></i> Inserir Aulas</li>
                 </a>
-                <a href="historicoaluno.html">
+                <a href="/historicoaluno">
                     <li><i class="fa fa-history"></i> Histórico de Aluno</li>
                 </a>
-                <a href="AdmLogin.php">
+                <a href="/AdmLogin.php">
                     <li><i class="fa fa-sign-out"></i> Encerrar</li>
                 </a>
             </ul>
@@ -70,7 +70,7 @@
 
 
 
-</html>
+<>
     
 
 
@@ -78,4 +78,4 @@
 
 
 </body>
-</html>
+<>
