--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,8 @@
+
+
+
 <!DOCTYPE html>
+
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8">
@@ -11,12 +15,12 @@
 	<link rel="shortcut icon" href="/assets/images/gt_favicon.png">
 	
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/font-awesome.min.css">
 
 	<!-- Styles bootstrap e CSS -->
-	<link rel="stylesheet" href="assets/css/bootstrap-theme.css" media="screen" >
-	<link rel="stylesheet" href="assets/css/main.css">
+	<link rel="stylesheet" href="/css/bootstrap-theme.css" media="screen" >
+	<link rel="stylesheet" href="/css/main.css">
 	<!-- Font Awesome-->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -34,7 +38,7 @@
 			<div class="navbar-header">
 				<!-- botão dos menu começo -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="/"><img src="assets/images" alt="Progressus HTML5 template"></a>
+				<a class="navbar-brand" href="/"><img src="/public/logo.png" alt="Progressus HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
